--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "react-scripts": "3.4.1"
   },
   "scripts": {
+    "dev": "webpack-dev-server --mode development",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --watchAll=false",
